--- a/src/index.template.html
+++ b/src/index.template.html
@@ -12,31 +12,22 @@
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
 
-    <link rel="icon" type="image/png" href="statics/app-logo-128x128.png" />
+    <link rel="icon" type="image/png" href="branding/telos.png" />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="statics/icons/favicon-16x16.png"
+      href="branding/favicon-16x16.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="statics/icons/favicon-32x32.png"
+      href="branding/favicon-32x32.png"
     />
-    <link rel="icon" type="image/ico" href="statics/icons/favicon.ico" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="statics/icons/apple-touch-icon.png"
-    />
-    <link rel="manifest" href="statics/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="statics/icons/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
+    <link rel="icon" type="image/ico" href="branding/telos.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="branding/telos.png" />
+    <link rel="mask-icon" href="branding/telos.png" />
     <link rel="stylesheet" href="https://use.typekit.net/uif6miu.css" />
   </head>
   <body>
